# py3grok

./: .editorconfig  .gitignore  .pylintrc  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
py3grok/: __init__.py  py3grok.py
tests/: test_py3grok.py
