[tool.poetry]
name = "py3grok"
version = "0.2.0"
description = "Parse strings and extract information from structured or unstructured data."
authors = ["Zackary Troop <zack.tro@gmail.com>"]
license = "MIT, Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"
regex = "^2022.3.15"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
pylint = "^2.13.4"
tox = "^3.24.5"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
